# vault-retrieval-engine

./: .gitignore  .pre-commit-config.yaml  .zizmor.yml  CHANGELOG.md  KNOWN_ISSUES.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-sweep.yml  eval-rig.yml  scorecard.yml  security.yml
_ops/review-bundle/security-pin-central-workflows/: acceptance-checklist.md  audit.md  screencast.mp4.skip
_ops/review-bundle/security-pin-central-workflows/screenshots/: NO_SCREENSHOTS.md
_vault_assets/: claude_query_hint.ps1  claude_query_hint.sh  claude_settings_hook.json
docs/: ios-shortcut.md  windows-service.md
docs/adr/: 0001-sqlite-vec.md  0002-networkx.md  0003-inferred-edge-threshold.md  0004-router-tiers.md  0005-mxbai-embed-default.md  README.md
overlays/githooks/: post-commit
overlays/githooks/post-commit.d/: 10-vault-engine.sh
overlays/launchd/: com.vault-retrieval.engine.plist
overlays/skills/vault/: crawl.md  synth.md
scripts/: check-blocked-terms.sh  demo-worktree-concurrency.sh  eval_no_rebuild.py  inference_smoke.py  install-launchd-service.sh  install-vault-overlays.sh  install-windows-service.ps1  smoke_real_vault.sh  start_service_pc.ps1  tailscale_check.ps1  test-overlay-install.sh  uninstall-launchd-service.sh  uninstall-windows-service.ps1
src/vault_engine/: __init__.py  auth.py  bow_adversarial.py  chunker.py  citations.py  cli.py  community.py  config.py  embedder.py  eval.py  http_server.py  indexer.py  inference.py  mcp_server.py  reranker.py  retrieval.py  router.py  service.py  url_ingester.py  vault_reader.py  watcher.py
src/vault_engine/stores/: __init__.py  graph_store.py  vec_store.py
tests/: conftest.py  smoke_check_blocked_terms.sh  smoke_install_vault_overlays_dispatcher.sh  smoke_post_commit_dispatcher.sh  test_auth.py  test_bow_adversarial.py  test_chunker.py  test_citations.py  test_citations_edge_type.py  test_cli.py  test_cli_serve.py  test_community.py  test_config.py  test_config_env_vars.py  test_decision_trace.py  test_embedder.py  test_eval.py  test_graph_store.py  test_http_server.py  test_indexer.py  test_indexer_edge_type.py  test_inference.py  test_mcp_connectivity.py  test_mcp_server.py  test_reranker.py  test_retrieval.py  test_retrieval_topology.py  test_router.py  test_router_dual_channel.py  test_service.py  test_url_ingester.py  test_vault_reader.py  test_vec_store.py  test_verify_harness.py  test_watcher.py
tests/fixtures/: adversarial_bow.jsonl  eval_fixtures.jsonl  legacy-monolithic-post-commit
tests/fixtures/sample_vault/raw/: 2026-01-01-alpha-raw.md  2026-01-02-beta-raw.md  2026-01-03-gamma-raw.md
tests/fixtures/sample_vault/wiki/sources/: 2026-01-01-alpha-source.md  2026-01-02-beta-source.md  2026-01-03-gamma-source.md
tests/fixtures/sample_vault/wiki/topics/: alpha.md  beta.md  gamma.md  orphan.md  zeta.md
tools/: verify_harness.py
