[project]
name = "vault-engine"
version = "0.1.0"
description = "Local retrieval engine over the Second-Brain vault."
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=3.3.0",
    "torch>=2.5.0",
    "sqlite-vec>=0.1.6",
    "networkx>=3.4",
    "watchdog>=6.0",
    "python-frontmatter>=1.1",
    "mistune>=3.0",
    "typer>=0.15",
    "pydantic>=2.9",
    "rich>=13.9",
    "mcp>=1.0,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "python-louvain>=0.16,<1.0",
    "pyjwt>=2.9,<3.0",
    "httpx>=0.27,<1.0",
    "trafilatura>=2.0.0",
]

[project.scripts]
vault-engine = "vault_engine.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.7",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires real embedding model and GPU",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line-too-long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert in tests
"src/vault_engine/cli.py" = ["B008"]  # Typer's documented pattern uses Option/Argument as defaults
"src/vault_engine/router.py" = ["RUF002"]  # en-dashes intentional in docstring table alignment
"src/vault_engine/url_ingester.py" = ["RUF001"]  # smart-quote regex deliberately matches unicode

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
extraPaths = ["src"]
