[project]
name = "vault-engine"
version = "0.1.0"
description = "Local semantic retrieval engine over a markdown vault."
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=5.6.0",
    "torch>=2.5.1",
    "sqlite-vec>=0.1.9",
    "networkx>=3.6.1",
    "watchdog>=6.0",
    "python-frontmatter>=1.3.0",
    "mistune>=3.3.3",
    "typer>=0.27.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "mcp>=1.28.1,<2.0",
    "fastapi>=0.139.2,<1.0",
    "uvicorn[standard]>=0.51.0,<1.0",
    "python-louvain>=0.16,<1.0",
    "pyjwt>=2.13.0,<3.0",
    "httpx>=0.28.1,<1.0",
    "trafilatura>=2.1.0",
]

[project.scripts]
vault-engine = "vault_engine.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pyright>=1.1.411",
    "ruff>=0.15.22",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires real embedding model and GPU",
]

# The paved-path `test` job runs `pytest --cov --cov-fail-under=<floor>` with
# no explicit --cov-report; show_missing makes the resulting default terminal
# report include missing line numbers (equivalent to --cov-report=term-missing)
# without needing to touch that command in the central reusable workflow.
[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line-too-long (formatter handles)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert in tests
"src/vault_engine/cli.py" = ["B008"]  # Typer's documented pattern uses Option/Argument as defaults
"src/vault_engine/router.py" = ["RUF002"]  # en-dashes intentional in docstring table alignment
"src/vault_engine/url_ingester.py" = ["RUF001"]  # smart-quote regex deliberately matches unicode

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
extraPaths = ["src"]
